hphp/test/zend/good/Zend/tests/errmsg_005.php.expectf

Fatal error: Invalid lvalue in %s/errmsg_005.php on line 10
